﻿v9.8.9 (2022-02-04)
- Added option to adjust to local time, for universal timezone. 
- Add channel to group shortcut.
- Optimized performance.

v9.8.8 (2022-01-24)
- Bug fixes.

v9.8.7 (2022-01-12)
- Added InputStream Adaptive shortcut in settings.
- Optimized performance.

v9.8.6 (2022-01-04)
- Fixed EPG table refresh on record completion.
- Fixed service Polsat GO access groups.
- Added WP Pilot DRM support.
- Bug fixes.

v9.8.5 (2021-12-12)
- Added .xz file support.
- Bug fixes.

v9.8.4 (2021-12-07)
- Fixed add channel error.

v9.8.3 (2021-12-06)
- Fixed service Telia Play catchup.
- Bug fixes.

v9.8.2 (2021-11-28)
- Added built-in addon browser.
- Bug fixes.

v9.8.1 (2021-11-16)
- Fixed service Polsat GO and Polsat GO Box.

v9.8.0 (2021-11-12)
- Hotfix.

v9.7.9 (2021-11-10)
- Fixed caching playlists.

v9.7.8 (2021-11-09)
- Updated EPG parsing.
- Fixed download notification error.
- Improved overall channel matching.
- Optimizations.

v9.7.7 (2021-11-04)
- Updated default User-Agent request header.
- Updated regex channel matching.
- Added possibility to modify local basemap.
- Bug fixes.

v9.7.6 (2021-11-03)
- Hotfix.

v9.7.5 (2021-11-02)
- Bug fixes.

v9.7.4 (2021-11-01)
- Added setting for EPG list sorting.
- Fixed tvg-id recognition.

v9.7.3 (2021-11-01)
- Updated basemaps.

v9.7.2 (2021-10-29)
- Updated language files.

v9.7.1 (2021-10-29)
- Updated basemaps.

v9.7.0 (2021-10-28)
- Fixed encoding issues Python 2.7.
- Bug fixes.

v9.6.9 (2021-10-27)
- Added replace country code setting.
- Fixed caching playlists.

v9.6.8 (2021-10-26)
- Fixed database issues Python 2.7.

v9.6.7 (2021-10-25)
- Added Content-Type headers for EPG filetype recognition.

v9.6.6 (2021-10-25)
- Added database Write-Ahead Logging (WAL) setting.
- Improved channel parsing.
- Improved performance.
- Fixed playlist stream redirect.

v9.6.5 (2021-10-19)
- Added urllib3 module.
- Rebuilded EPG menu selection and group categories.
- Improved performance.

v9.6.4 (2021-10-10)
- Hotfix.
