@@ -2,7 +2,7 @@
 <addon
     id="script.mtvguide"
     name="m-TVGuide [COLOR gold][B]EPG[/B][/COLOR]"
-    version="9.8.9-beta.21"
+    version="9.8.9-beta.22"
     provider-name="Mods-kodi">
   <requires>
     <import addon="xbmc.addon" version="17.0.0"/>
@@ -41,8 +41,9 @@
     <forum>https://github.com/Mariusz89B/script.mtvguide/discussions</forum>
 	<website>https://github.com/Mariusz89B/script.mtvguide</website>
     <source>m-TVGuide © 2013 - 2022</source>
-    <news>v9.8.9 (2022-02-04)
+    <news>v9.8.9 (2022-02-06)
 - Added option to adjust to local time, for universal timezone. 
+- Added Debug mode.
 - Add channel to group shortcut.
 - Optimized performance.
 
