@@ -53,4 +53,4 @@ if which == "credits":
 f = xbmcvfs.File(path,"rb")
 data = f.read()
 dialog = xbmcgui.Dialog()
-dialog.textviewer(strings(90004), data)
+dialog.textviewer(strings(90004) + ' - m-TVGuide [COLOR gold]EPG[/COLOR]', data, True)
