@@ -53,4 +53,4 @@ if which == "startup":
 f = xbmcvfs.File(path,"rb")
 data = f.read()
 dialog = xbmcgui.Dialog()
-dialog.textviewer(strings(90002), data)
+dialog.textviewer(strings(90002) + ' - m-TVGuide [COLOR gold]EPG[/COLOR]', data, True)
