@@ -53,4 +53,4 @@ if which == "wiki":
 f = xbmcvfs.File(path,"rb")
 data = f.read()
 dialog = xbmcgui.Dialog()
-dialog.textviewer(strings(30913), data)
+dialog.textviewer(strings(30913) + ' - m-TVGuide [COLOR gold]EPG[/COLOR]', data, True)
